--- a/.github/mkdocs.yml
+++ b/.github/mkdocs.yml
@@ -1,5 +1,5 @@
 site_name: meutudo Awesome Data
-site_url: ''
+site_url: 'https://mt-awesome-data.app.com/'
 repo_url: https://github.com/meutudo/mt-awesome-data
 repo_name: mt-awesome-data
 theme:
